[Evo][Horanet] #4599 "ChildID" parameter now indicates an individual ID
An adult ID can be passed in "ChildID".